force-app/main/default/objects/Employement_Website_Name__c/Employement_Website_Name__c.object-meta.xml
<CustomObject>
    <label>Employement Website Name</label>
    <nameField>
        <label>Employement Website Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employement Website Names</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>