force-app/main/default/objects/Employement_Website_Name__c/fields/Price_Per_Post__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Post__c</fullName>
    <label>Price Per Post</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>