force-app/main/default/objects/Employement_Website_Name__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>